fix: corrected the use of functions to make the code more readable

--- a/todolist/src/css/style.css
+++ b/todolist/src/css/style.css
@@ -16,8 +16,7 @@ body {
 
 /* Title */
 .container_title {
-    margin-top: -5px;
-    margin-bottom: 5px;
+    transform: translateY(-5px);
 }
 
 .img-title {
